--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -2,7 +2,7 @@
   background: #475569;
   color: white;
   padding: 0 20px;
-  height: 60px;
+  flex: 0 0 60px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
