--- a/src/styles/TimeSlot.scss
+++ b/src/styles/TimeSlot.scss
@@ -1,5 +1,6 @@
 .timeslot {
   background: rgba(220, 252, 231, 0.7);
+  border: 1px solid #cbd5e1;
   color: #777;
   font-size: 14px;
   font-weight: lighter;
@@ -15,17 +16,16 @@
   align-items: center;
   justify-content: center;
   outline: none;
-  border-radius: 8px;
+  border-radius: 4px;
 
   &[aria-pressed="true"] {
     opacity: 0.5;
   }
 
   &.selected {
-    background: rgba(220, 252, 231, 1);
-    border: 3px solid #34d399;
     font-weight: bold;
     z-index: 50;
+    box-shadow: 0 10px 28px -30px black;
 
     .resize-handle {
       color: #ccc;
@@ -43,7 +43,15 @@
     border-radius: 15px;
     position: absolute;
     top: calc(50% - 15px);
-    border: 3px solid #34d399;
+    border: 1px solid #cbd5e1;
+
+    &[aria-pressed="true"] {
+      background: #94a3b8;
+      border-color: #94a3b8;
+      svg{
+        color: white;
+      }
+    }
 
     svg {
       font-size: 20px;
@@ -67,13 +75,8 @@
     bottom: initial;
     right: 20px;
 
-    &.selected {
-      border-width: 2px;
-    }
-
     .resize-handle {
       left: calc(50% - 15px);
-      border-width: 2px;
 
       svg {
         transform: rotate(90deg);
