improvements to drag and drop detection and accuracy

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -45,7 +45,7 @@
       }
 
       &.delete-slot {
-        background: #ef4444;
+        // background: #ef4444;
         svg {
           font-size: 13px;
         }
