--- a/src/styles/Calendar.scss
+++ b/src/styles/Calendar.scss
@@ -12,6 +12,7 @@
   border-top: 1px solid #ccc;
   min-height: 160px;
   position: relative;
+  overflow: hidden;
   // touch-action: pan-x;
 
   .day-label {
@@ -62,9 +63,9 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 1px;
+        width: 2px;
         height: 100%;
-        background: #60a5fa;
+        background: #94a3b8;
       }
 
       &.endposition:before{
@@ -72,9 +73,9 @@
         position: absolute;
         top: 0;
         right: 0;
-        width: 1px;
+        width: 2px;
         height: 100%;
-        background: #60a5fa;
+        background: #94a3b8;
       }
     }
 
@@ -122,9 +123,8 @@
 .drag-preview {
   cursor: grabbing;
   box-shadow: 0 10px 28px -30px black;
-  border: 1px dashed #cbd5e1;
-  background: rgba(0,0,0,0.02);
-  border-radius: 4px;
+  background: rgba(134, 239, 172, 0.7);
+  border: 1px solid #cbd5e1;
 
   &.hidden{
     opacity: 0;
@@ -149,6 +149,7 @@
     scroll-snap-align: start;
     scroll-snap-stop: always;
     flex: 0 0 100vw;
+    overflow: initial;
 
     .day-label {
       width: 100%;
@@ -176,7 +177,7 @@
 
     .day-label-number {
       margin-bottom: 0;
-      font-size: 20px;
+      font-size: 18px;
       margin-right: 5px;
     }
 
