--- a/src/styles/TimeSlot.scss
+++ b/src/styles/TimeSlot.scss
@@ -1,35 +1,34 @@
 .timeslot {
   background: rgba(220, 252, 231, 0.7);
   border: 1px solid #cbd5e1;
-  color: #777;
-  font-size: 14px;
-  font-weight: lighter;
   touch-action: none;
   position: absolute;
+  left: -1px;
   bottom: 20px;
   z-index: 20;
   height: 50%;
   min-height: 50px;
   width: 100%;
   cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   outline: none;
-  border-radius: 4px;
-
-  &[aria-pressed="true"] {
-    opacity: 0.5;
-  }
 
   &.selected {
-    font-weight: bold;
+    background: rgba(134, 239, 172, 0.7);
     z-index: 50;
     box-shadow: 0 10px 28px -30px black;
 
     .resize-handle {
-      color: #ccc;
+      color: #bbb;
       display: flex;
+    }
+
+    &[aria-pressed="true"] {
+      background: transparent;
+      border: 2px dashed #ddd;
+      box-shadow: none;
+      .resize-handle{
+        display: none;
+      }
     }
   }
 
@@ -37,12 +36,12 @@
     display: none;
     align-items: center;
     justify-content: center;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     background: white;
     border-radius: 15px;
     position: absolute;
-    top: calc(50% - 15px);
+    top: calc(50% - 12.5px);
     border: 1px solid #cbd5e1;
 
     &[aria-pressed="true"] {
@@ -58,11 +57,11 @@
     }
 
     &.start {
-      left: -16px;
+      left: -12.5px;
     }
 
     &.end {
-      right: -16px;
+      right: -12.5px;
     }
   }
 }
@@ -74,22 +73,24 @@
     min-height: 0;
     bottom: initial;
     right: 20px;
+    left: auto;
+    top: -1px;
 
     .resize-handle {
-      left: calc(50% - 15px);
+      left: calc(50% - 12.5px);
 
       svg {
         transform: rotate(90deg);
       }
 
       &.start {
-        left: calc(50% - 15px);
-        top: -16px;
+        left: calc(50% - 12.5px);
+        top: -12.5px;
       }
 
       &.end {
         top: auto;
-        bottom: -16px;
+        bottom: -12.5px;
         right: auto;
       }
     }
