add modifiers to drag handles to improve ux

--- a/src/styles/Calendar.scss
+++ b/src/styles/Calendar.scss
@@ -130,6 +130,10 @@
     &.dragging {
       scroll-snap-type: none;
     }
+
+    &.resizing-vertically {
+      overflow: hidden;
+    }
   }
 
   .day {
