--- a/src/styles/TimeSlot.scss
+++ b/src/styles/TimeSlot.scss
@@ -133,6 +133,9 @@
       border-top-right-radius: 0;
       border-bottom-right-radius: 7px;
       border-bottom-left-radius: 7px;
+      svg {
+        left: 0;
+      }
     }
 
     &.end {
@@ -140,6 +143,9 @@
       border-top-left-radius: 7px;
       border-top-right-radius: 7px;
       border-bottom-left-radius: 0;
+      svg {
+        right: 0;
+      }
     }
   }
 }
